--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "@tanstack/react-query": "^5.68.0",
     "axios": "^1.8.3",
     "cmdk": "^1.0.4",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
+    "express": "^4.21.2",
     "framer-motion": "^12.5.0",
     "jotai": "^2.12.2",
     "lucide-react": "^0.479.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -45,7 +49,10 @@
     "sonner": "^2.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "express": "^4.x.x",
+    "dotenv": "^16.x.x",
+    "mongoose": "^6.x.x"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
